--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Edge Addon Action'
+description: 'Upload your addon to Edge Add-ons'
+author: 'Malachi Soord'
 inputs:
   product_id:
     required: true
