Fix action parameters

--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,7 @@ runs:
     - ${{ inputs.access_token_url }}
     - ${{ inputs.zip }}
     - ${{ inputs.notes }}
+    - ${{ inputs.debug }}
 branding:
   icon: 'book'
   color: 'blue'
