--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,15 @@ jobs:
     - name: Install pip dependencies
       run: pip install -r requirements.txt
     - uses: pre-commit/action@v3.0.1
+
+  test:
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.13'
+    - name: Install pip dependencies
+      run: pip install -r requirements.txt
+    - name: Run tests
+      run: python -m pytest -v
