--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         python-version: '3.13'
     - name: Install pip dependencies
-      run: pip install -r requirements.txt
+      run: pip install -r requirements-dev.txt
     - uses: pre-commit/action@v3.0.1
 
   test:
@@ -28,6 +28,6 @@ jobs:
       with:
         python-version: '3.13'
     - name: Install pip dependencies
-      run: pip install -r requirements.txt
+      run: pip install -r requirements-dev.txt
     - name: Run tests
       run: python -m pytest -v
