--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     rev: v1.17.0
     hooks:
     -   id: mypy
-        additional_dependencies: [types-requests]
+        additional_dependencies: [types-requests, types-PyYAML]
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: 'v0.12.5'
     hooks:
